# nebula

./: .gitignore  CMakeLists.txt  README.md  commands.json  mfcc_preprocessor.onnx  nebula_full.onnx  nebula_wake_word.onnx  nebula_wake_word_int8.onnx
src/: main.cpp  nebula_noise.prof
src/actions/: actions.cpp  actions.hpp
src/audio/: capture.cpp  capture.hpp  feedback.cpp  feedback.hpp  wakeword.cpp  wakeword.hpp
src/config/: config.cpp  config.hpp
src/engine/: nebula_engine.cpp  nebula_engine.hpp  stream_controller.cpp  stream_controller.hpp  vosk_manager.cpp  vosk_manager.hpp
src/state/: state.cpp  state.hpp
src/utils/: logger.hpp  shell.hpp
src/waybar/: waybar.cpp  waybar.hpp
